<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/clock_layout"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/category_list"
            android:layout_marginTop="18dp"
            android:layout_height="51dp"
            app:layout_widthPercent="90%">

            <ImageView
                android:id="@+id/drawer_meun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/logo_angeltalk"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/logo_angeltalk_dark"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/category_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_delete_dark"/>

        </RelativeLayout>

        <GridView
            android:id="@+id/category_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/clock_layout"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:horizontalSpacing="0dp"
            android:listSelector="@drawable/gridview_selector"
            android:numColumns="auto_fit"
            android:padding="0dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="15dp"
            app:layout_widthPercent="89%" />

    </androidx.percentlayout.widget.PercentRelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/drawer_menu" >

        </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>


