...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onboarding_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/onboarding_first_page"
...
            android:layout_below="@id/onboarding_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="77dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/onboarding_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="131dp"
            android:background="@drawable/ic_onboarding_logo" />
...
