<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:showIn="@layout/activity_new_category">

    <RelativeLayout
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/category_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:src="@drawable/icon_bus_menu" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:text="@string/new_category_name"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium_font"
        android:textAppearance="@style/DefaultFont"
        tools:text="TEST" />

</LinearLayout>