<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/img_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/onboarding_finish_angelee"
        android:layout_width="191dp"
        android:layout_height="162dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"
        android:scaleType="fitXY"
        android:src="@drawable/angelee"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/onboarding_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:src="@drawable/btn_appstart"
        android:visibility="gone" />

    <TextView
        android:id="@+id/onboarding_privacy_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/onboarding_finish"
        android:layout_marginBottom="10.5dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_light_font"
        android:textSize="14dp"
        android:textColor="@color/pink_guide"
        android:visibility="gone"
        android:textColorLink="@color/pink_guide" />

</RelativeLayout>