<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/new_category_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="19dp"
        android:layout_height="45dp"
        app:layout_widthPercent="90%"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/left_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="20dp"
            android:src="@drawable/ic_back_arrow_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/new_category"
            android:textColor="@color/text_color_dark"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/new_category_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_confirm_dark"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_below="@id/new_category_header"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_widthPercent="90%">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:id="@+id/new_category_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">
                <include layout="@layout/item_category" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23.5dp"
                android:layout_gravity="start"
                android:text="@string/category_label"
                android:textColor="@color/text_color_dark"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:gravity="top"
                android:orientation="horizontal"
                android:weightSum="100">

                <EditText
                    android:id="@+id/edit_category_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="99"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_new_category_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/text_color_dark"
                    android:textColorHint="@color/text_color_dark_opacity_40"
                    android:textCursorDrawable="@drawable/make_category_cursor_color"
                    android:textSize="18dp"
                    style="@style/AppTheme.EditText"/>

                <ImageView
                    android:id="@+id/category_title_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="invisible"
                    android:src="@drawable/ic_cancel_dark" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/control_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23.5dp"
                android:layout_gravity="start"
                android:text="@string/icon_label"
                android:textColor="@color/text_color_dark"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/icon_list"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="15dp"
                android:splitMotionEvents="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="23.5dp"
                android:layout_gravity="start"
                android:layout_marginTop="27dp"
                android:text="@string/background_label"
                android:textColor="@color/text_color_dark"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/color_list"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="15dp"
                android:splitMotionEvents="false" />

        </LinearLayout>

    </LinearLayout>

</androidx.percentlayout.widget.PercentRelativeLayout>