<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:src="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/category_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="잠금화면"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/category_item_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/category_item_title"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:gravity="bottom"
        android:paddingBottom="5dp"
        android:text="0개 카드"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/list_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="22.5dp"
        android:src="@drawable/ic_list" />

</RelativeLayout>