<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/category_item_card"
    android:layout_width="130dp"
    android:layout_height="130dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:id="@+id/category_item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/drop_shadow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:src="@drawable/ic_delete_button"
                android:visibility="gone" />

            <include layout="@layout/item_category" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>