package angeltalk.plus.presentation.activity.v1;


import androidx.annotation.NonNull;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;

import org.hamcrest.Matcher;
import org.hamcrest.Matchers;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import angeltalk.plus.R;
import angeltalk.plus.presentation.activity.CategoryMenuActivity;
import angeltalk.plus.presentation.activity.TestUtil;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MakeNewCategoryTest {

    @Rule
    public ActivityTestRule<CategoryMenuActivity> mActivityTestRule = new ActivityTestRule<>(CategoryMenuActivity.class);

    @Before
    public void setUp() throws Exception {
        // package problem
//        TestUtil.InitializeDatabase(mActivityTestRule.getActivity().getApplicationContext(), mActivityTestRule.getActivity().categoryRepository, mActivityTestRule.getActivity().cardRepository);
    }

    @Test
    public void makeNewCategoryTest() {
        onView(newCategoryItemTitle())
                .check(matches(withText("새 카테고리")))
                .check(matches(isDisplayed()));
        onView(newCategoryItemCard())
                .check(matches(isDisplayed()))
                .perform(click());

        onView(TestUtil.childAtPosition(withId(R.id.new_category_header), 1))
                .check(matches(withText("새 카테고리")))
                .check(matches(isDisplayed()));
        onView(withId(R.id.category_title))
                .check(matches(withText("카테고리 이름")))
                .check(matches(isDisplayed()));
        onView(withId(R.id.edit_category_title))
                .check(matches(isDisplayed()))
                .perform(replaceText("취소테스트"), closeSoftKeyboard())
                .perform(pressImeActionButton());

        onView(withId(R.id.category_title))
                .check(matches(isDisplayed()))
                .check(matches(withText("취소테스트")));
        onView(withId(R.id.category_title_cancel))
                .check(matches(isDisplayed()))
                .perform(click());

        onView(withId(R.id.category_title))
                .check(matches(withText("카테고리 이름")))
                .check(matches(isDisplayed()));
        onView(withId(R.id.edit_category_title))
                .check(matches(isDisplayed()))
                .check(matches(withText("")));
        onView(withId(R.id.new_category_save_button))
                .check(matches( TestUtil.withTextColor(getColorFromResources(R.color.white_32))));

        onView(withId(R.id.edit_category_title))
                .check(matches(isDisplayed()))
                .perform(replaceText("테스트"), closeSoftKeyboard())
                .perform(pressImeActionButton());

        onView(withId(R.id.new_category_save_button))
                .check(matches( TestUtil.withTextColor(getColorFromResources(R.color.white))))
                .check(matches(withText("등록")))
                .check(matches(isDisplayed()))
                .perform(click());

        onView(withId(R.id.category_item_title))
                .check(matches(withText("테스트")))
                .check(matches(isDisplayed()));
        onView(withId(R.id.category_item_count))
                .check(matches(withText("총 0장")))
                .check(matches(isDisplayed()));
        onView(withId(R.id.back_button))
                .perform(click());

        onView(newCategoryItemTitle())
                .check(matches(withText("테스트")));
    }

    private int getColorFromResources(int id) {
        return mActivityTestRule.getActivity().getResources().getColor(id);
    }

    @NonNull
    private Matcher<View> newCategoryItemCard() {
        return Matchers.allOf(withId(R.id.category_item_card),
                TestUtil.childAtPosition(
                        withId(R.id.category_list),
                        5));
    }

    @NonNull
    private Matcher<View> newCategoryItemTitle() {
        return Matchers.allOf(withId(R.id.category_title),
                TestUtil.childAtPosition(TestUtil.childAtPosition(TestUtil.childAtPosition(TestUtil.childAtPosition(
                        TestUtil.childAtPosition(
                                IsInstanceOf.<View>instanceOf(android.widget.GridView.class),
                                5),
                        0),0),1),1));
    }

}
